--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
 	id 'war'
 	id 'org.springframework.boot' version '3.1.2'
 	id 'io.spring.dependency-management' version '1.1.2'
+	id "jacoco"
+	id "org.sonarqube" version "4.2.1.3168"
 }
 
 group = 'ar.edu.unq'
@@ -22,9 +24,22 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	compileOnly 'org.projectlombok:lombok:1.18.24'
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+	testCompileOnly 'org.projectlombok:lombok:1.18.24'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+}
+
+sonar {
+	properties {
+		property "sonar.projectKey", "ar.edu.unq.crypto-p2p"
+		property "sonar.projectName", "ar.edu.unq.crypto-p2p"
+	}
 }
 
 tasks.named('test') {
