configuracion clave fija springboot security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 integration.binance.api.url=https://api1.binance.com/api/v3/
 
+#security settings
+spring.security.user.mane=user
+spring.security.user.password=1
