--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
 }
 
-sonar {
+sonarqube {
 	properties {
 		property "sonar.projectKey", "cryptop2pkey_ar-edu-unq-crypto-p2p"
 		property "sonar.organization", "cryptop2pkey"
